Fix X-User-ID propagation, RBAC, cart pricing, transaction boundaries, invalid compose YAML; pin Lombok for JDK 24